# rbd

./: CMakeLists.txt  README.md  linalg.cpp  linalg.hpp  matrix.hpp  rb.json  rb_matrix.json  rb_radians.json  rbd.cpp  rigid-body.hpp  state.hpp  vector.hpp
examples/: CMakeLists.txt  rb.json  rb_2d.json  rb_angles.json  rb_matrix.json  rb_matrix2.json  rb_radians.json
src/: CMakeLists.txt  matrix.cpp  matrix.hpp  precice_rbd.cpp  rbd.cpp  rigid-body.cpp  rigid-body.hpp  state.cpp  state.hpp  test_rbd.cpp  vector.cpp  vector.hpp
